crates/hwp-core/tests/snapshots/snapshot_tests__charstyle_hwpx_html.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: html
---
<div class="hwp-body">

</div>
