crates/hwp-core/tests/snapshots/snapshot_tests__example_markdown.snap
---
source: crates/hwp-core/tests/snapshot_tests.rs
expression: markdown
---
# HWP 문서



**용지 크기**: 0.00mm x 0.00mm



삼강오륜

삼강오륜 은 현재까지도 이어져 일상생활에 깊이 뿌리내린 윤리 도덕이랍니다.

삼강

군위신강: 임금과 신하 사이에 마땅히 지켜야 할 도리

부위자강 : 어버이와 자식 사이에 마땅히 지켜야 할 도리

부위부강 : 남편과 아내 사이에 지켜야 할 도리

오륜

군신유의: 임금과 신하 사이에는 의로움이 있어야 함.

부자유친: 어버이와 자식 사이에는 친함이 있어야 함.

부부유별: 부부 사이에는 구별이 있어야 함.

장유유서: 어른과 아이 사이에는 차례와 질서가 있어야 함.

붕우유신: 친구 사이에는 믿음이 있어야 함
